--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,3 +11,30 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.input {
+  padding: 4px;
+  border-radius: 25px;
+  text-align: center;
+}
+
+.nav {
+  background-color: aquamarine;
+
+}
+
+.sredina {
+  display: ruby-text-container;
+  margin: auto;
+  padding: 12pt;
+  font-size: 24px;
+  line-height: 34px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.sredina-tekst {
+  text-align: center;
+}
