--- a/frontend/src/components/Forma.css
+++ b/frontend/src/components/Forma.css
@@ -13,10 +13,14 @@
     padding: 5px;
 }
 
+.pozicija {
+    width:fit-content;
+}
+
 .unos {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
 }
 
 .tipke {
